# desafio_tecnico_ia_developer

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analysis.py  cards.py  cashflows.py  credit_scores.py  customers.py  health.py  loans.py  payments.py  pdf_reports.py
backend/app/core/: config.py  errors.py  html_utils.py  llm_utils.py  pdf_utils.py  report_styles.py  report_utils.py
backend/app/db/: database.py
backend/app/schemas/: __init__.py  analysis.py  base.py  card.py  cashflow.py  credit_score.py  customer.py  loan.py  payment.py  pdf_report.py
backend/app/services/: __init__.py  analysis_service.py  azure_ai_service.py  card_service.py  cashflow_service.py  credit_score_service.py  customer_service.py  loan_service.py  payment_service.py  pdf_report_service.py  service_factory.py
frontend/: .env.example  Dockerfile  app.py  pyproject.toml
frontend/src/: __init__.py
frontend/src/components/: __init__.py  ui_components.py
frontend/src/config/: __init__.py  settings.py
frontend/src/pages/: __init__.py  consolidation_analysis.py  customer_dashboard.py  data_management.py  debt_analysis.py  payment_simulations.py  pdf_reports.py
frontend/src/utils/: __init__.py  api_client.py  charts.py  ui_helpers.py
