[project]
name = "desafio-tecnico-ia-developer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "langchain-azure-ai==0.1.5",
    "pandas>=2.3.2",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]
