[project]
name = "desafio-tecnico-ia-developer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-azure-ai==0.1.5",
    "langchain-community>=0.3.27",
    "langgraph>=0.2.58",
    "pandas>=2.3.2",
    "pydantic-settings>=2.10.1",
    "reportlab>=4.4.3",
    "uvicorn>=0.35.0",
    "markdown>=3.7",
    "weasyprint>=62.3",
]
